# ip6_ebl_coords

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  dependencies_sources.md  ebl_config.json  gui_instruction.md  live.py  make_gui.sh  neo4j_setup.md  pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: grosse_ringstrecke_layout  weichen_run_5_7.json  weichen_run_7_9.json
data/got_raw_files/run1/: gr_ringstrecke_s3_DAB_GER
data/got_raw_files/run10/: dab_ew01_dcc019  dab_ew02_dcc017  dab_ew03_dcc018  dab_ew04_dcc013  dab_ew05_dcc014  dab_ew06_dcc016
data/got_raw_files/run4/: fus_dkw4a_dcc004  fus_dkw4b_dcc005  fus_dkw9a_dcc010  fus_dkw9b_dcc011  fus_ew01_dcc001  fus_ew02_dcc002  fus_ew03_dcc003  fus_ew05_dcc006  fus_ew06_dcc007  fus_ew07_dcc008  fus_ew08_dcc009  fus_ew10_dcc012  fus_ew11_dcc013  fus_ew12_dcc014
ebl_coords/: decorators.py  main.py
ebl_coords/backend/: constants.py  ecos.py  pyvista_init.py  rest_service.py  singleton_meta.py  transform_data.py  tvData.py  tv_data.py
ebl_coords/ecos/: api.py  query_generator.py
ebl_coords/frontend/: custom_widgets.py  editor.py  gui.py  main_gui.py  map_editor.py  net_maker.py  strecken_editor.py  weichen_editor.py  zone_maker.py
ebl_coords/graph_db/: api.py  graph_db_api.py  infra_dab.py  query_generator.py
ebl_coords/plot/: helpers.py  plotter_3d.py
ecos_mock/: ecos.csv
tests/: __init__.py  base_converter_test.py  example_test.py  notebook_init_test.py  pyvista_init_test.py  replay_converter_test.py
tests/test_data/: raw_got_test_file
(+99 files in other folders)
